--- a/Motores-plantilla/introduccion/basesDatos/views/index.hbs
+++ b/Motores-plantilla/introduccion/basesDatos/views/index.hbs
@@ -1,2 +1,5 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<h1>¡Bienvenido, {{nombre}}!</h1>
+<p>Seleccione una opcion</p>
+<a href="/users">Listar usuarios</a>
+{{!-- ustedes --}}
+<a href="/mascotas">Listar mascotas</a>
