--- a/Motores-plantilla/introduccion/basesDatos/views/mascotas.hbs
+++ b/Motores-plantilla/introduccion/basesDatos/views/mascotas.hbs
@@ -1,6 +1,6 @@
 <h1>Listado de usuarios</h1>
 <h2>Registro:usuarios</h2>
-<table border="1">
+<table>
     <thead>
         <th>nombre</th>
         <th>nombre_dueño</th>
