--- a/Motores-plantilla/introduccion/basesDatos/views/usuarios.hbs
+++ b/Motores-plantilla/introduccion/basesDatos/views/usuarios.hbs
@@ -1,6 +1,6 @@
 <h1>Listado de usuarios</h1>
 <h2>Registro:usuarios</h2>
-<table border="1">
+<table>
     <thead>
         <th>Cedula</th>
         <th>Nombre</th>
